[tool.poetry]
name = "pythonprojecttemplate"
version = "0.1.0"
description = "template python project"
authors = ["Robert Piwowarek <rpw@touk.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
pytest = "^5.4.1"
nox = "^2019.11.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
